Apply modifications to root page styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import './css-reset.css';
+
 html {
   box-sizing: border-box;
 }
@@ -284,7 +286,6 @@ i {
 
 #detail {
   flex: 1;
-  padding: 2rem 4rem;
   width: 100%;
 }
 
