--- a/src/styles/splash_screen.scss
+++ b/src/styles/splash_screen.scss
@@ -63,22 +63,31 @@ body {
   width: 100%;
   margin: 0 auto;
   align-items: center;
-}
 
-h1 {
-  color: rgb(255, 255, 255);
-  font-size: 7rem;
-  line-height: 6.5rem;
-  margin-bottom: 1rem;
-  font-family: 'Lobster', sans-serif;
+  .text {
+    color: rgb(255, 255, 255);
+    font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 
-  &::before {
-    background: #fff;
-    content: '\020';
-    display: block;
-    height: 2px;
-    margin: 1rem 0;
-    width: 1em;
+  h1 {
+    color: rgb(255, 255, 255);
+    font-size: 7rem;
+    line-height: 6.5rem;
+    margin-bottom: 1rem;
+    font-family: 'Lobster', sans-serif;
+
+    &::before {
+      background: #fff;
+      content: '\020';
+      display: block;
+      height: 2px;
+      margin: 1rem 0;
+      width: 1em;
+    }
   }
 }
 
@@ -90,19 +99,19 @@ h1 {
   margin: 0 auto;
   align-items: center;
   text-align: center;
-}
 
-p {
-  font-size: 1rem;
-  line-height: 2.8rem;
-  color: white;
-  margin-bottom: 4rem;
-}
+  p {
+    font-size: 1rem;
+    line-height: 2.8rem;
+    color: rgb(255, 255, 255);
+    margin-bottom: 4rem;
+  }
 
-#btn {
-  background: transparent;
-  border: none;
-  color: white;
+  .btn {
+    background: transparent;
+    border: none;
+    color: white;
+  }
 }
 
 .log-btn {
@@ -116,11 +125,6 @@ p {
   }
 }
 
-.text {
-  font-size: 1.2rem;
-  color: white;
-}
-
 .text-focus-in {
   color: white;
   animation: text-focus-in 1.2s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.7s both;
@@ -131,8 +135,9 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-  h1 {
-    color: rgb(250, 250, 250);
-    font-size: 5rem;
+  .splash_inner {
+    h1 {
+      font-size: 4.5rem;
+    }
   }
 }
