--- a/src/routes/HomePage/index.scss
+++ b/src/routes/HomePage/index.scss
@@ -1,35 +1,32 @@
-$sec-color: #c2c2c2;
-$light-gray: #eae8e8;
+@import '../../assets/sheets/global-variables.scss';
 
 .main-page-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  max-height: 100vh;
-  overflow-y: scroll;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    max-height: 100vh;
+    overflow-y: scroll;
 
-  .main-title {
-    font-size: 38px;
-    letter-spacing: 6px;
-    text-transform: uppercase;
-    font-family: 'Anton', sans-serif;
-    margin-bottom: 3px;
-  }
+    .main-title {
+        font-size: 38px;
+        letter-spacing: 6px;
+        text-transform: uppercase;
+        font-family: 'Anton', sans-serif;
+        margin-bottom: 3px;
+    }
 
-  .main-subtitle {
-    font-weight: 500;
-    font-size: 15px;
-    margin-bottom: 20px;
-}
+    .main-subtitle {
+        font-size: 15px;
+        margin-bottom: 20px;
+        font-weight: 500;
+    }
 }
 
 .sec-color {
     color: $sec-color;
 }
-
-
 
 .breaker {
     font-weight: 700;
@@ -38,9 +35,15 @@ $light-gray: #eae8e8;
     color: $light-gray;
 }
 
+.sec-title {
+    font-size: 16px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
 .display-section-container {
     display: flex;
-    align-items: center;
     max-height: fit-content;
     justify-content: space-between;
     width: 100%;
@@ -48,7 +51,107 @@ $light-gray: #eae8e8;
     .items-container {
         display: flex;
         justify-content: space-between;
-        gap: 30px;
-        padding: 0 40px ;
+        flex-wrap: wrap;
+        gap: 40px;
+        padding: 0 40px;
+
+        @media screen and (max-width: 500px) {
+            padding: 0 !important;
+        }
+    }
+
+    .nav-btn {
+        height: fit-content;
+        margin-top: calc(15vh - 19px);
+        background: $primary-color;
+        color: white !important;
+        font-weight: 700;
+        border: 0;
+        box-shadow: none;
+        height: fit-content;
+
+        &.previous-btn {
+            padding: 8px 8px 8px 30px;
+            border-radius: 0 20px 20px 0;
+        }
+
+        &.next-btn {
+            padding: 8px 30px 8px 8px;
+            border-radius: 20px 0 0 20px;
+        }
+
+        &:disabled,
+        &[disabled] {
+            background: $primary-light-color;
+        }
+
+        @media screen and (max-width:366px) {
+            padding: 16px 8px !important;
+
+            &.previous-btn {
+                border-radius: 30px 0 0 30px;
+
+            }
+
+            &.next-btn {
+                border-radius: 0 30px 30px 0;
+            }
+        }
+    }
+}
+
+.unit-display-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    background: $united-gray;
+    padding: 10px 10px 20px 10px;
+    border-radius: 15px;
+
+    .image-container {
+        position: relative;
+        min-height: 30vh;
+        max-height: 30vh;
+        height: 30vh;
+        width: 100%;
+        border-radius: 8px;
+        overflow: hidden;
+
+        .price-fixed {
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            padding: 6px 16px;
+            background: $primary-light-color;
+            border-radius: 0 10px 0 0;
+            font-size: 14px;
+            margin-bottom: 0;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            float: left;
+            background-size: cover;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+    }
+
+    .title-container {
+        margin: 25px 0 0;
+    }
+
+    .details {
+        margin-bottom: 5px;
+        font-size: 14px;
+    }
+
+    .location {
+        margin-bottom: 0;
+        font-size: 12px;
+        color: $primary-color;
     }
 }
