Add reservation route and import tailwind css into main css file

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import './assets/sheets/css-reset.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html {
   box-sizing: border-box;
