--- a/src/routes/HomePage/index.scss
+++ b/src/routes/HomePage/index.scss
@@ -6,10 +6,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  flex: 1;
+  padding-top: 40px;
 }
 
-.reservation-page-container {
-  padding-top: 40px;
+.main-page-container {
+  margin-bottom: 40px;
 }
 
 .main-title {
