--- a/src/styles/unitForm.scss
+++ b/src/styles/unitForm.scss
@@ -1,73 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Playfair+Display:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
 
-.div-wrapper {
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
-  font-weight: 100;
-  font-size: 12px;
-  color: #777;
+.unit-form-container {
+  font-family: Arial, sans-serif;
+  background-color: #e2e2e2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 
-  .form-container {
-    max-width: 500px;
+  .awesome-form {
+    background: #fff;
     width: 100%;
-    margin: 1rem auto;
-    position: relative;
-    background-color: #fff;
-    padding: 0 20px;
-    display: flex;
-    justify-content: center;
+    max-width: 460px;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 0 10 rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
 
-    h2 {
-      display: block;
-      font-size: 30px;
-      margin-bottom: 1.5rem;
-      font-family: 'Playfair Display', serif;
+    .btn {
+      border-radius: 5px;
+      background: #007bff;
+      color: #fff;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        background: #0056b3;
+      }
     }
 
-    form {
-      width: 100%;
-      padding: 25px;
-      margin-bottom: 3rem;
-      box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    .form-control {
+      background: none;
+      border: none;
+      border-bottom: 1px solid #e0e0e0;
+      border-radius: 0;
+      box-shadow: none;
+      transition: all 0.3s ease-in-out;
+      margin-bottom: 1rem;
+      padding: 0.7rem 1rem;
 
-      input[type='number'],
-      input[type='text'],
-      input[type='file'] {
-        margin-bottom: 20px;
-        border: 1px solid #cbcbcb;
-        padding: 10px;
+      &:focus {
+        border-color: #007bff;
+        box-shadow: 0px 0px 5px rgba(0, 123, 255, 0.5);
+        outline: none;
       }
+    }
 
-      textarea {
-        height: 5rem;
-        padding: 0 4rem 2rem;
-        box-sizing: border-box;
-        border: 2px solid #ccc;
-        border-radius: 4px;
-        background-color: #fff;
-        font-size: 1rem;
-        line-height: 1.4rem;
-        margin-bottom: 2rem;
-      }
+    .unit-form-header {
+      margin-bottom: 2.5rem;
+      color: #828282;
+      text-align: center;
+      text-decoration: underline;
+      font-family: 'DM Serif Display', serif;
+    }
 
-      input[type='number']::placeholder,
-      input[type='text']::placeholder {
-        font-size: 0.9rem;
-      }
+    &:hover {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    }
+  }
 
-      button {
-        background-color: #007bff;
-        color: #fff;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 1rem;
-        font-family: 'Playfair Display', serif;
-
-        &:hover {
-          background-color: #0069d9;
-        }
-      }
+  @media screen and (max-width: 900px) {
+    .awesome-form {
+      width: 95%;
     }
   }
 }
