--- a/src/styles/unitForm.scss
+++ b/src/styles/unitForm.scss
@@ -15,7 +15,7 @@
     max-width: 460px;
     padding: 2rem;
     border-radius: 10px;
-    box-shadow: 0 0 10 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
 
     .btn {
@@ -41,7 +41,7 @@
 
       &:focus {
         border-color: #007bff;
-        box-shadow: 0px 0px 5px rgba(0, 123, 255, 0.5);
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
         outline: none;
       }
     }
