--- a/src/components/topbar/index.scss
+++ b/src/components/topbar/index.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  position: fixed;
+  width: 100vw;
+  z-index: 300;
 
   @media screen and (min-width: 601px) {
     display: none;
@@ -87,7 +89,7 @@
     transition: height ease 0.6s;
     height: 30px;
     z-index: 100;
-    overflow: auto;
+    overflow: hidden;
 
     &.expanded {
       height: 100vh;
