--- a/src/routes/HomePage/index.scss
+++ b/src/routes/HomePage/index.scss
@@ -8,10 +8,15 @@
   flex-direction: column;
   flex: 1;
   padding-top: 40px;
+  min-height: 100%;
+
+  @media screen and (max-width: 601px) {
+    padding-top: 90px;
+  }
 }
 
 .main-page-container {
-  margin-bottom: 40px;
+  padding-bottom: 40px;
 }
 
 .main-title {
