--- a/src/styles/unitForm.scss
+++ b/src/styles/unitForm.scss
@@ -2,21 +2,31 @@
 
 .unit-form-container {
   font-family: Arial, sans-serif;
-  background-color: #e2e2e2;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   margin: 0;
+  height: 100vh;
+  width: 100%;
+  background-image: url('https://images.pexels.com/photos/681368/pexels-photo-681368.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+  background-position: center center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   .awesome-form {
     background: #fff;
+    opacity: 0.8;
     width: 100%;
     max-width: 460px;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
+
+    &:hover {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    }
 
     .btn {
       border-radius: 5px;
@@ -48,20 +58,17 @@
 
     .unit-form-header {
       margin-bottom: 2.5rem;
-      color: #828282;
+      color: #1c1c1c;
+      opacity: 0.8;
       text-align: center;
       text-decoration: underline;
       font-family: 'DM Serif Display', serif;
-    }
-
-    &:hover {
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
   }
 
   @media screen and (max-width: 900px) {
     .awesome-form {
-      width: 95%;
+      width: 90%;
     }
   }
 }
