--- a/src/styles/unitForm.scss
+++ b/src/styles/unitForm.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-image: url('https://images.pexels.com/photos/681368/pexels-photo-681368.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
   background-position: center center;
