--- a/src/index.css
+++ b/src/index.css
@@ -77,11 +77,11 @@ button:active {
   color: #eeb004;
 }
 
-#sidebar nav a.active span {
+#sidebar nav a.active span, #sidebar nav a.semi-active span {
   color: inherit;
 }
 
-#sidebar nav .active i {
+#sidebar nav .active i, #sidebar nav .semi-active i {
   color: inherit;
 }
 
@@ -125,6 +125,11 @@ button:active {
 
 #sidebar nav a.active {
   background: #97bf0f;
+  color: white;
+}
+
+#sidebar nav a.semi-active {
+  background: #b2bf88;
   color: white;
 }
 
